<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/diary_title"
        style="@style/BlackText"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:gravity="center"
        android:hint="@string/hint_title"
        android:maxLines="1" />


    <ImageView
        android:layout_width="220dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:clickable="false"
        android:contentDescription="@string/divider" />


    <EditText
        android:id="@+id/diary_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:padding="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/appendTime"
            style="@style/RedButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp"
            android:text="@string/edit_appendTime" />

        <TextView
            android:id="@+id/titleTime"
            style="@style/BlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="2016年12月3日" />

        <Button
            android:id="@+id/done_write"
            style="@style/RedButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:text="@string/edit_done" />
    </RelativeLayout>
</LinearLayout>