<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/year_in_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_year"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/month_in_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_month"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/day_in_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_day"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="220dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="#000000" />


    <EditText
        android:padding="8dp"
        android:id="@+id/diary_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#00000000"
        android:gravity="top|start"
        android:inputType="textMultiLine" />


    <RelativeLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:background="@drawable/btn_press"
            android:textColor="#ffffff"
            style="@style/textStyle"
            android:id="@+id/appendTime"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:layout_alignParentStart="true"
            android:text="@string/edit_appendTime"
            />

        <Button
            android:background="@drawable/btn_press"
            android:textColor="#ffffff"
            android:id="@+id/done_write"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="3dp"
            android:layout_alignParentEnd="true"
            android:text="@string/edit_done"
            style="@style/textStyle"
            />
    </RelativeLayout>

</LinearLayout>